# Evaluation-of-MLflow-vs.-W-B-for-Chest-X-Ray-Classification

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MlFlow.py  PROJECT_STRUCTURE.md  README.md  WD.py  cleanup_duplicates.py  compare_mlflow_wandb.py  data_loader.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.py  train_mlflow.py  train_wandb.py
.github/workflows/: ci.yml
configs/mlflow/: experiments.yaml  hyperparameters.yaml  quick_test.yaml
configs/wandb/: advanced_config.yaml  default_config.yaml  hyperparameter_tuning_config.yaml
docs/: API_REFERENCE.md  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS_SUMMARY.md  PROJECT_DOCUMENTATION.md  README_HYPERPARAMETER_TUNING.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  TECHNICAL_GUIDE.md
docs/architecture/: ARCHITECTURE_OVERVIEW.md  DESIGN_PATTERNS.md
docs/development/: BEST_PRACTICES.md  TESTING_GUIDE.md
docs/examples/: PARAMETER_MATRIX_EXAMPLE.md  WANDB_PARAMETER_MATRIX_EXAMPLE.md
docs/mlflow/: HYPERPARAMETER_TUNING_GUIDE.md  MLFLOW_GUIDE.md  MLFLOW_QUICK_START.md
examples/: example_mlflow_usage.py  example_wandb_usage.py  refactored_training_example.py
scripts/: compare_mlflow_wandb.py  run_hyperparameter_tuning.py  run_wandb_hyperparameter_tuning.py  start_mlflow_ui.py  train_mlflow.py  train_wandb.py
src/: __init__.py
src/config/: __init__.py  config.py
src/models/: __init__.py  cnn_model.py  cnn_model_refactored.py
src/tracking/: __init__.py  base_tracker.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  config.py  logging_utils.py  metrics.py
tests/: __init__.py  conftest.py
tests/unit/: test_models.py  test_utils.py
